--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
 			</nav>
 		</div>
 	</header>
+	<div class="c-header__shadow"></div>
 	<div class="c-main-slider__wrapper swiper-container">
 		<div class="c-main-slider__arrows c-slide-arrows l-wrapper">
 			<div class="c-slide-arrows__wrapper">
@@ -58,13 +59,13 @@
 			</div>
 		</div>
 		<div class="swiper-wrapper">
-			<div class="c-main-slider__slide c-slide swiper-slide" style="background-image: url('/img/main_foto.jpg')">
+			<div class="c-main-slider__slide c-slide swiper-slide" style="background-image: url('img/main_foto.jpg')">
 				<div class="c-slide__wrapper l-wrapper">
 					<h2 class="c-slide__title">Заголовок на видео</h2>
 					<p class="c-slide__text">Небольшой текстовый блок с описанием в несколько строчек</p>
 				</div>
 			</div>
-			<div class="c-main-slider__slide c-slide swiper-slide" style="background-image: url('/img/main_foto.jpg')">
+			<div class="c-main-slider__slide c-slide swiper-slide" style="background-image: url('img/main_foto.jpg')">
 				<div class="c-slide__wrapper l-wrapper">
 					<h2 class="c-slide__title">Заголовок на видео</h2>
 					<p class="c-slide__text">Небольшой текстовый блок с описанием в несколько строчек</p>
@@ -84,42 +85,42 @@
 	<h3 class="page-title">Наши услуги</h3>
 	<div class="l-section c-services__wrapper l-wrapper">
 		<div class="c-services__item c-service">
-			<img class="c-service__image" src="/img/s1.png" alt="">
+			<img class="c-service__image" src="img/s1.png" alt="">
 			<div class="c-service__wrapper c-service__wrapper--active">
 				<h4 class="c-service__title">Полировка</h4>
 				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
 			</div>
 		</div>
 		<div class="c-services__item c-service">
-			<img class="c-service__image" src="/img/s2.png" alt="">
+			<img class="c-service__image" src="img/s2.png" alt="">
 			<div class="c-service__wrapper">
 				<h4 class="c-service__title">Керамика</h4>
 				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
 			</div>
 		</div>
 		<div class="c-services__item c-service">
-			<img class="c-service__image" src="/img/s3.png" alt="">
+			<img class="c-service__image" src="img/s3.png" alt="">
 			<div class="c-service__wrapper">
 				<h4 class="c-service__title">Антигравийная<br>пленка</h4>
 				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
 			</div>
 		</div>
 		<div class="c-services__item c-service">
-			<img class="c-service__image" src="/img/s4.png" alt="">
+			<img class="c-service__image" src="img/s4.png" alt="">
 			<div class="c-service__wrapper">
 				<h4 class="c-service__title">Химчистка</h4>
 				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
 			</div>
 		</div>
 		<div class="c-services__item c-service">
-			<img class="c-service__image" src="/img/s5.png" alt="">
+			<img class="c-service__image" src="img/s5.png" alt="">
 			<div class="c-service__wrapper">
 				<h4 class="c-service__title">Тонировка</h4>
 				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
 			</div>
 		</div>
 		<div class="c-services__item c-service">
-			<img class="c-service__image" src="/img/s6.png" alt="">
+			<img class="c-service__image" src="img/s6.png" alt="">
 			<div class="c-service__wrapper">
 				<h4 class="c-service__title">Стайлинг</h4>
 				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
@@ -128,25 +129,25 @@
 	</div>
 	<a class="c-services__button" href="" download><span class="c-services__button-text">Посмотреть прайс</span><span class="c-services__button-icon"></span></a>
 </section>
-<section class="c-choice" style="background-image: url('/img/c_main.jpg')">
+<section class="c-choice" style="background-image: url('img/c_main.jpg')">
 	<h3 class="page-title page-title--white">Почему нас выбирают</h3>
 	<div class="c-choice__wrapper">
-		<div class="c-choice__item" style="background-image: url('/img/c1.png')">
+		<div class="c-choice__item" style="background-image: url('img/c1.png')">
 			<p class="c-choice__text">Только лучшие материалы</p>
 		</div>
-		<div class="c-choice__item" style="background-image: url('/img/c2.png')">
+		<div class="c-choice__item" style="background-image: url('img/c2.png')">
 			<p class="c-choice__text">Большой опыт работы</p>
 		</div>
-		<div class="c-choice__item" style="background-image: url('/img/c3.png')">
+		<div class="c-choice__item" style="background-image: url('img/c3.png')">
 			<p class="c-choice__text">Желание стать лучшими</p>
 		</div>
-		<div class="c-choice__item" style="background-image: url('/img/c4.png')">
+		<div class="c-choice__item" style="background-image: url('img/c4.png')">
 			<p class="c-choice__text">Разумные цены</p>
 		</div>
-		<div class="c-choice__item" style="background-image: url('/img/c5.png')">
+		<div class="c-choice__item" style="background-image: url('img/c5.png')">
 			<p class="c-choice__text"> Положительные отзывы</p>
 		</div>
-		<div class="c-choice__item" style="background-image: url('/img/c6.png')">
+		<div class="c-choice__item" style="background-image: url('img/c6.png')">
 			<p class="c-choice__text">Прозрачность работы</p>
 		</div>
 	</div>
@@ -154,7 +155,7 @@
 <section class="c-works">
 	<h3 class="page-title">Наши работы</h3>
 	<div class="c-works__wrapper">
-		<div class="c-works__item c-work" style="background-image: url('/img/w1.jpg')">
+		<div class="c-works__item c-work" style="background-image: url('img/w1.jpg')">
 			<div class="c-work__wrapper">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -168,7 +169,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w2.jpg')">
+		<div class="c-works__item c-work" style="background-image: url('img/w2.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -182,7 +183,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w3.jpg')">
+		<div class="c-works__item c-work" style="background-image: url('img/w3.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -196,7 +197,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w4.jpg')">
+		<div class="c-works__item c-work" style="background-image: url('img/w4.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ. </h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -210,7 +211,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w5.jpg')">
+		<div class="c-works__item c-work" style="background-image: url('img/w5.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -224,7 +225,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w6.jpg')">
+		<div class="c-works__item c-work" style="background-image: url('img/w6.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -238,7 +239,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w7.jpg')">
+		<div class="c-works__item c-work" style="background-image: url('img/w7.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
@@ -252,7 +253,7 @@
 				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
 			</div>
 		</div>
-		<div class="c-works__item c-work" style="background-image: url('/img/w8.jpg')">
+		<div class="c-works__item c-work" style="background-image: url('img/w8.jpg')">
 			<div class="c-work__wrapper ">
 				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
 				<p class="c-work__text">Выполненные работы:</p>
