--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,31 @@
 @@include('./template/header.html')
 <div class="c-top-panel">
 	<div class="c-top-panel__wrapper l-wrapper">
-		<div class="c-menu-button js-menu-button mobile-visible">
-			<div class="c-menu-button__bar c-menu-button__bar--top"></div>
-			<div class="c-menu-button__bar c-menu-button__bar--middle"></div>
-			<div class="c-menu-button__bar c-menu-button__bar--bottom"></div>
+		<div class="c-hamburger-menu mobile-visible">
+			<input id="c-hamburger-menu__toggle" type="checkbox" />
+			<label class="c-hamburger-menu__button c-menu-button" for="c-hamburger-menu__toggle">
+				<span></span>
+			</label>
+			<ul class="c-hamburger-menu__wrapper">
+				<li><a class="c-hamburger-menu__item" href="#">Дейтелинг</a></li>
+				<li><a class="c-hamburger-menu__item c-hamburger-menu__item--parent" href="#">Услуги</a>
+					<ul class="c-nav__drop-menu c-drop-menu">
+						<li class="c-drop-menu__item"><a href="">Полировка</a></li>
+						<li class="c-drop-menu__item"><a href="">Керамика</a></li>
+						<li class="c-drop-menu__item"><a href="">Антигравийная пленка</a></li>
+						<li class="c-drop-menu__item"><a href="">Химчистка</a></li>
+						<li class="c-drop-menu__item"><a href="">Стайлинг</a></li>
+						<li class="c-drop-menu__item"><a href="">Тонировка</a></li>
+					</ul>
+				</li>
+				<li><a class="c-hamburger-menu__item" href="#">Новости</a></li>
+				<li><a class="c-hamburger-menu__item" href="#">Контакты</a></li>
+			</ul>
 		</div>
 		<div class="c-top-panel__block">
 			<button class="c-top-panel__button c-button-sing-up c-button-sing-up--transparent mob-hidden">Записаться</button>
 			<p class="c-top-panel__text ml-20 mob-hidden">Работаем без перерывов<br>и выходных с <span class="t-bold">9:00 - 18:00</span></p>
-			<p class="c-top-panel__text m-ml-15 mobile-visible">Время работы 9:00 - 18:00<br>ул. Большая Ордынка 38</p>
+			<p class="c-top-panel__text m-ml-15 mobile-visible m-ml-35">Время работы 9:00 - 18:00<br>ул. Большая Ордынка 38</p>
 		</div>
 		<div class="c-top-panel__block">
 			<div class="c-top-panel__contact">
