--- a/app/index.html
+++ b/app/index.html
@@ -329,9 +329,9 @@
 </section>
 <footer class="c-footer">
 	<div class="c-footer__wrapper l-wrapper">
-		<div class="c-footer__item">
+		<div class="c-footer__item c-footer__item--mob-flex">
 			<img class="c-header__logo" src="img/logo.svg" alt="">
-			<div class="c-icons m-t-15">
+			<div class="c-icons m-t-15 m-mt-0">
 				<a href='#' class="c-icons__icon c-icons__icon--white"><i class="fab fa-instagram icon-middle"></i></a>
 				<a href='#' class="c-icons__icon c-icons__icon--white ml-5"><i class="fab fa-vk icon-middle"></i></a>
 			</div>
@@ -347,18 +347,18 @@
 			</ul>
 		</div>
 		<div class="c-footer__item c-footer__item--mobile-reverse">
-			<button class="c-top-panel__button c-button-sing-up  c-button-sing-up--white">Записаться</button>
+			<button class="c-top-panel__button c-button-sing-up  c-button-sing-up--white mob-hidden">Записаться</button>
 			<div class="c-footer__contacts">
-				<div class="l-container ml-65">
+				<div class="l-container ml-65 m-ml-0">
 					<span class="c-top-panel__title">Контакты</span>
-					<a href="tel:+79992222222" class="c-top-panel__phone"></a><a class="c-top-panel__number ml-20" href="tel:+79992222222">+7 999 222 22 22</a>
-					<span class="c-top-panel__text m-t-10 ">ул. Большая Ордынка 38</span>
+					<a href="tel:+79992222222" class="c-top-panel__phone"></a><a class="c-top-panel__number ml-20 m-ml-15" href="tel:+79992222222">+7 999 222 22 22</a>
+					<span class="c-top-panel__text m-t-10">ул. Большая Ордынка 38</span>
 					<span class="c-top-panel__caption m-t-10">С 9:00 до 18:00</span>
 				</div>
 			</div>
 		</div>
 	</div>
-	<hr class="c-footer__line">
-	<p class="c-footer__description">Приносит пользу людям, бять профессионалами своего дела, получать удовольствие от работы – для нас это более ценно, чем просто зарабатывать деньги. Поэтому мы в постоянном движении. Перенимаем опыт у профессионала, посещаем главные детейлинг – выставки мира.</p>
+	<hr class="c-footer__line mob-hidden">
+	<p class="c-footer__description mob-hidden">Приносит пользу людям, бять профессионалами своего дела, получать удовольствие от работы – для нас это более ценно, чем просто зарабатывать деньги. Поэтому мы в постоянном движении. Перенимаем опыт у профессионала, посещаем главные детейлинг – выставки мира.</p>
 </footer>
 @@include('./template/footer.html')
