--- a/app/index.html
+++ b/app/index.html
@@ -1,364 +1,12 @@
 @@include('./template/header.html')
-<div class="c-top-panel">
-	<div class="c-top-panel__wrapper l-wrapper">
-		<div class="c-hamburger-menu mobile-visible">
-			<input id="c-hamburger-menu__toggle" type="checkbox" />
-			<label class="c-hamburger-menu__button c-menu-button" for="c-hamburger-menu__toggle">
-				<span></span>
-			</label>
-			<ul class="c-hamburger-menu__wrapper">
-				<li><a class="c-hamburger-menu__item" href="#">Дейтелинг</a></li>
-				<li><a class="c-hamburger-menu__item c-hamburger-menu__item--parent" href="#">Услуги</a>
-					<ul class="c-nav__drop-menu c-drop-menu">
-						<li class="c-drop-menu__item"><a href="">Полировка</a></li>
-						<li class="c-drop-menu__item"><a href="">Керамика</a></li>
-						<li class="c-drop-menu__item"><a href="">Антигравийная пленка</a></li>
-						<li class="c-drop-menu__item"><a href="">Химчистка</a></li>
-						<li class="c-drop-menu__item"><a href="">Стайлинг</a></li>
-						<li class="c-drop-menu__item"><a href="">Тонировка</a></li>
-					</ul>
-				</li>
-				<li><a class="c-hamburger-menu__item" href="#">Новости</a></li>
-				<li><a class="c-hamburger-menu__item" href="#">Контакты</a></li>
-			</ul>
-		</div>
-		<div class="c-top-panel__block">
-			<button class="c-top-panel__button c-button-sing-up c-button-sing-up--transparent mob-hidden">Записаться</button>
-			<p class="c-top-panel__text ml-20 mob-hidden">Работаем без перерывов<br>и выходных с <span class="t-bold">9:00 - 18:00</span></p>
-			<p class="c-top-panel__text m-ml-15 mobile-visible m-ml-35">Время работы 9:00 - 18:00<br>ул. Большая Ордынка 38</p>
-		</div>
-		<div class="c-top-panel__block">
-			<div class="c-top-panel__contact">
-				<a href="tel:+79992222222" class="c-top-panel__phone"></a>
-				<div class="l-container ml-15 desktop">
-					<a class="c-top-panel__number" href="tel:+79992222222">+7 999 222 22 22</a>
-					<span class="c-top-panel__text">ул. Большая Ордынка 38</span>
-				</div>
-			</div>
-			<div class="c-icons ml-30 m-ml-15">
-				<a href="#" class="c-icons__icon c-icons__icon--red"><i class="fab fa-instagram icon-middle"></i></a>
-				<a href="#" class="c-icons__icon c-icons__icon--red ml-5"><i class="fab fa-vk icon-middle"></i></a>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="c-main-slider">
-	<header class="c-header">
-		<div class="c-header__wrapper l-wrapper">
-			<img class="c-header__logo" src="img/logo.svg" alt="Логотип">
-			<nav class="c-header__nav c-nav mob-hidden">
-				<ul class="c-nav__list">
-					<li class="c-nav__item"><a class="c-nav__link">Дейтелинг</a></li>
-					<li class="c-nav__item ml-85">
-						<a class="c-nav__link c-nav__link--parent">Услуги</a><i class="fas fa-caret-down c-nav__caret col-red"></i>
-						<ul class="c-nav__drop-menu c-drop-menu c-drop-menu--top">
-							<li class="c-drop-menu__item c-drop-menu__item--active">Полировка</li>
-							<li class="c-drop-menu__item">Керамика</li>
-							<li class="c-drop-menu__item">Антигравийная пленка</li>
-							<li class="c-drop-menu__item">Химчистка</li>
-							<li class="c-drop-menu__item">Стайлинг</li>
-							<li class="c-drop-menu__item">Тонировка</li>
-						</ul>
-					</li>
-					<li class="c-nav__item ml-85"><a class="c-nav__link">Новости</a></li>
-					<li class="c-nav__item ml-85"><a class="c-nav__link">Контакты</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	<div class="c-header__shadow"></div>
-	<div class="c-main-slider__wrapper swiper-container">
-		<div class="c-main-slider__arrows c-slide-arrows l-wrapper">
-			<div class="c-slide-arrows__wrapper">
-				<span class="c-slide-arrows__arrow c-slide-arrows__arrow--left"></span>
-				<span class="c-slide-arrows__arrow c-slide-arrows__arrow--right"></span>
-			</div>
-		</div>
-		<div class="swiper-wrapper">
-			<div class="c-main-slider__slide c-slide swiper-slide" style="background-image: url('img/main_foto.jpg')">
-				<div class="c-slide__wrapper l-wrapper">
-					<h2 class="c-slide__title">Заголовок на видео</h2>
-					<p class="c-slide__text">Небольшой текстовый блок с описанием в несколько строчек</p>
-				</div>
-			</div>
-			<div class="c-main-slider__slide c-slide swiper-slide" style="background-image: url('img/main_foto.jpg')">
-				<div class="c-slide__wrapper l-wrapper">
-					<h2 class="c-slide__title">Заголовок на видео</h2>
-					<p class="c-slide__text">Небольшой текстовый блок с описанием в несколько строчек</p>
-				</div>
-			</div>
-		</div>
-		<div class="c-bullets">
-			<ul class="c-bullets__wrapper">
-				<li class="c-bullets__bullet c-bullets__bullet--active"></li>
-				<li class="c-bullets__bullet"></li>
-				<li class="c-bullets__bullet"></li>
-			</ul>
-		</div>
-	</div>
-</div>
-<section class="c-services">
-	<h3 class="page-title">Наши услуги</h3>
-	<div class="l-section c-services__wrapper l-wrapper">
-		<div class="c-services__item c-service">
-			<img class="c-service__image" src="img/s1.png" alt="">
-			<div class="c-service__wrapper c-service__wrapper--active">
-				<h4 class="c-service__title">Полировка</h4>
-				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
-			</div>
-		</div>
-		<div class="c-services__item c-service">
-			<img class="c-service__image" src="img/s2.png" alt="">
-			<div class="c-service__wrapper">
-				<h4 class="c-service__title">Керамика</h4>
-				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
-			</div>
-		</div>
-		<div class="c-services__item c-service">
-			<img class="c-service__image" src="img/s3.png" alt="">
-			<div class="c-service__wrapper">
-				<h4 class="c-service__title">Антигравийная<br>пленка</h4>
-				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
-			</div>
-		</div>
-		<div class="c-services__item c-service">
-			<img class="c-service__image" src="img/s4.png" alt="">
-			<div class="c-service__wrapper">
-				<h4 class="c-service__title">Химчистка</h4>
-				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
-			</div>
-		</div>
-		<div class="c-services__item c-service">
-			<img class="c-service__image" src="img/s5.png" alt="">
-			<div class="c-service__wrapper">
-				<h4 class="c-service__title">Тонировка</h4>
-				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
-			</div>
-		</div>
-		<div class="c-services__item c-service">
-			<img class="c-service__image" src="img/s6.png" alt="">
-			<div class="c-service__wrapper">
-				<h4 class="c-service__title">Стайлинг</h4>
-				<p class="c-service__text">Небольшое текстовое описание в несколько строчек</p>
-			</div>
-		</div>
-	</div>
-	<a class="c-services__button" href="" download><span class="c-services__button-text">Посмотреть прайс</span><span class="c-services__button-icon"></span></a>
-</section>
-<section class="c-choice" style="background-image: url('img/c_main.jpg')">
-	<h3 class="page-title page-title--white">Почему нас выбирают</h3>
-	<div class="c-choice__wrapper">
-		<div class="c-choice__item" style="background-image: url('img/c1.png')">
-			<p class="c-choice__text">Только лучшие материалы</p>
-		</div>
-		<div class="c-choice__item" style="background-image: url('img/c2.png')">
-			<p class="c-choice__text">Большой опыт работы</p>
-		</div>
-		<div class="c-choice__item" style="background-image: url('img/c3.png')">
-			<p class="c-choice__text">Желание стать лучшими</p>
-		</div>
-		<div class="c-choice__item" style="background-image: url('img/c4.png')">
-			<p class="c-choice__text">Разумные цены</p>
-		</div>
-		<div class="c-choice__item" style="background-image: url('img/c5.png')">
-			<p class="c-choice__text"> Положительные отзывы</p>
-		</div>
-		<div class="c-choice__item" style="background-image: url('img/c6.png')">
-			<p class="c-choice__text">Прозрачность работы</p>
-		</div>
-	</div>
-</section>
-<section class="c-works">
-	<h3 class="page-title">Наши работы</h3>
-	<div class="c-works__wrapper">
-		<div class="c-works__item c-work" style="background-image: url('img/w1.jpg')">
-			<div class="c-work__wrapper">
-				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
-				<p class="c-work__text">Выполненные работы:</p>
-				<ul class="c-work__list">
-					<li>восстановительная полировка кузова;</li>
-					<li>защитное покрытие CANDY;</li>
-					<li>полная химчистка салона;</li>
-					<li>окрас суппортов без снятия;</li>
-					<li>антихром значков.</li>
-				</ul>
-				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
-			</div>
-		</div>
-		<div class="c-works__item c-work" style="background-image: url('img/w2.jpg')">
-			<div class="c-work__wrapper ">
-				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
-				<p class="c-work__text">Выполненные работы:</p>
-				<ul class="c-work__list">
-					<li>восстановительная полировка кузова;</li>
-					<li>защитное покрытие CANDY;</li>
-					<li>полная химчистка салона;</li>
-					<li>окрас суппортов без снятия;</li>
-					<li>антихром значков.</li>
-				</ul>
-				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
-			</div>
-		</div>
-		<div class="c-works__item c-work" style="background-image: url('img/w3.jpg')">
-			<div class="c-work__wrapper ">
-				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
-				<p class="c-work__text">Выполненные работы:</p>
-				<ul class="c-work__list">
-					<li>восстановительная полировка кузова;</li>
-					<li>защитное покрытие CANDY;</li>
-					<li>полная химчистка салона;</li>
-					<li>окрас суппортов без снятия;</li>
-					<li>антихром значков.</li>
-				</ul>
-				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
-			</div>
-		</div>
-		<div class="c-works__item c-work" style="background-image: url('img/w4.jpg')">
-			<div class="c-work__wrapper ">
-				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ. </h4>
-				<p class="c-work__text">Выполненные работы:</p>
-				<ul class="c-work__list">
-					<li>восстановительная полировка кузова;</li>
-					<li>защитное покрытие CANDY;</li>
-					<li>полная химчистка салона;</li>
-					<li>окрас суппортов без снятия;</li>
-					<li>антихром значков.</li>
-				</ul>
-				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
-			</div>
-		</div>
-		<div class="c-works__item c-work" style="background-image: url('img/w5.jpg')">
-			<div class="c-work__wrapper ">
-				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
-				<p class="c-work__text">Выполненные работы:</p>
-				<ul class="c-work__list">
-					<li>восстановительная полировка кузова;</li>
-					<li>защитное покрытие CANDY;</li>
-					<li>полная химчистка салона;</li>
-					<li>окрас суппортов без снятия;</li>
-					<li>антихром значков.</li>
-				</ul>
-				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
-			</div>
-		</div>
-		<div class="c-works__item c-work" style="background-image: url('img/w6.jpg')">
-			<div class="c-work__wrapper ">
-				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
-				<p class="c-work__text">Выполненные работы:</p>
-				<ul class="c-work__list">
-					<li>восстановительная полировка кузова;</li>
-					<li>защитное покрытие CANDY;</li>
-					<li>полная химчистка салона;</li>
-					<li>окрас суппортов без снятия;</li>
-					<li>антихром значков.</li>
-				</ul>
-				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
-			</div>
-		</div>
-		<div class="c-works__item c-work" style="background-image: url('img/w7.jpg')">
-			<div class="c-work__wrapper ">
-				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
-				<p class="c-work__text">Выполненные работы:</p>
-				<ul class="c-work__list">
-					<li>восстановительная полировка кузова;</li>
-					<li>защитное покрытие CANDY;</li>
-					<li>полная химчистка салона;</li>
-					<li>окрас суппортов без снятия;</li>
-					<li>антихром значков.</li>
-				</ul>
-				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
-			</div>
-		</div>
-		<div class="c-works__item c-work" style="background-image: url('img/w8.jpg')">
-			<div class="c-work__wrapper ">
-				<h4 class="c-work__title">AUDI A5 COUPE 2012 ПРОБЕГ 105000 КМ.</h4>
-				<p class="c-work__text">Выполненные работы:</p>
-				<ul class="c-work__list">
-					<li>восстановительная полировка кузова;</li>
-					<li>защитное покрытие CANDY;</li>
-					<li>полная химчистка салона;</li>
-					<li>окрас суппортов без снятия;</li>
-					<li>антихром значков.</li>
-				</ul>
-				<p class="c-work__price">Чек 37 500 руб. (со скидкой 20%)</p>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="c-news">
-	<h3 class="page-title">Последние новости</h3>
-	<div class="c-news__wrapper l-wrapper">
-		<div class="c-news__item">
-			<img class="c-news__image" src="img/n1.png" alt="">
-			<span class="c-news__mark">10.10</span>
-			<div class="c-news__description">
-				<h3 class="c-news__title">В нашей мастерской появилась новая услуга</h3>
-				<p class="c-news__text">Восстановительная полировка кузова; защитное покрытие CANDY; полная химчистка</p>
-			</div>
-		</div>
-		<div class="c-news__item">
-			<img class="c-news__image" src="img/n2.png" alt="">
-			<span class="c-news__mark">10.10</span>
-			<div class="c-news__description">
-				<h3 class="c-news__title">В нашей мастерской появилась новая услуга</h3>
-				<p class="c-news__text">Восстановительная полировка кузова; защитное покрытие CANDY; полная химчистка</p>
-			</div>
-		</div>
-		<div class="c-news__item">
-			<img class="c-news__image" src="img/n3.png" alt="">
-			<span class="c-news__mark">10.10</span>
-			<div class="c-news__description">
-				<h3 class="c-news__title">В нашей мастерской появилась новая услуга</h3>
-				<p class="c-news__text">Восстановительная полировка кузова; защитное покрытие CANDY; полная химчистка</p>
-			</div>
-		</div>
-	</div>
-	<span class="c-services__button"><span class="c-services__button-text">Показать еще</span></span>
-</section>
-<section class="c-map">
-	<div class="c-map__container" id="map"></div>
-	<div class="c-map__wrapper l-wrapper">
-		<div class="c-map__form c-form">
-			<h4 class="c-form__title">Обратная связь</h4>
-			<input class="c-form__input" type="text" placeholder="Имя">
-			<input class="c-form__input" type="text" placeholder="Телефон">
-			<textarea class="c-form__input c-form__input--textarea" placeholder="Ваш комментарий"></textarea>
-			<input class="c-services__button c-form__button" type="submit" value="Отправить">
-		</div>
-	</div>
-</section>
-<footer class="c-footer">
-	<div class="c-footer__wrapper l-wrapper">
-		<div class="c-footer__item c-footer__item--mob-flex">
-			<img class="c-header__logo" src="img/logo.svg" alt="">
-			<div class="c-icons m-t-15 m-mt-0">
-				<a href='#' class="c-icons__icon c-icons__icon--white"><i class="fab fa-instagram icon-middle"></i></a>
-				<a href='#' class="c-icons__icon c-icons__icon--white ml-5"><i class="fab fa-vk icon-middle"></i></a>
-			</div>
-		</div>
-		<div class="c-footer__item desktop">
-			<ul class="c-nav__drop-menu c-drop-menu c-drop-menu--footer">
-				<li class="c-drop-menu__item c-drop-menu__item--active">Полировка</li>
-				<li class="c-drop-menu__item">Керамика</li>
-				<li class="c-drop-menu__item">Антигравийная пленка</li>
-				<li class="c-drop-menu__item">Химчистка</li>
-				<li class="c-drop-menu__item">Стайлинг</li>
-				<li class="c-drop-menu__item">Тонировка</li>
-			</ul>
-		</div>
-		<div class="c-footer__item c-footer__item--mobile-reverse">
-			<button class="c-top-panel__button c-button-sing-up  c-button-sing-up--white mob-hidden">Записаться</button>
-			<div class="c-footer__contacts">
-				<div class="l-container ml-65 m-ml-0">
-					<span class="c-top-panel__title">Контакты</span>
-					<a href="tel:+79992222222" class="c-top-panel__phone"></a><a class="c-top-panel__number ml-20 m-ml-15" href="tel:+79992222222">+7 999 222 22 22</a>
-					<span class="c-top-panel__text m-t-10">ул. Большая Ордынка 38</span>
-					<span class="c-top-panel__caption m-t-10">С 9:00 до 18:00</span>
-				</div>
-			</div>
-		</div>
-	</div>
-	<hr class="c-footer__line mob-hidden">
-	<p class="c-footer__description mob-hidden">Приносит пользу людям, бять профессионалами своего дела, получать удовольствие от работы – для нас это более ценно, чем просто зарабатывать деньги. Поэтому мы в постоянном движении. Перенимаем опыт у профессионала, посещаем главные детейлинг – выставки мира.</p>
-</footer>
+
+@@include('./template/components/index/c-top-panel.html')
+@@include('./template/components/index/c-main-slider.html')
+@@include('./template/components/index/c-services.html')
+@@include('./template/components/index/c-choice.html')
+@@include('./template/components/index/c-works.html')
+@@include('./template/components/index/c-news.html')
+@@include('./template/components/index/c-map.html')
+@@include('./template/components/index/c-footer.html')
+
 @@include('./template/footer.html')
