--- a/app/detail.html
+++ b/app/detail.html
@@ -7,9 +7,9 @@
     <div class="c-detail-service__column c-detail-service__column--left">
         <div class="c-detail-service__block">
             <h4 class="c-detail-service__subtitle">Прайс лист</h4>
-            <a class="c-services__button c-services__button--detail" href="" download><span class="c-services__button-text">Смотреть</span><span class="c-services__button-icon"></span></a>
+            <a class="c-services__button c-services__button--detail" href="" download><span class="c-services__button-text">Смотреть</span><span class="c-services__button-icon c-services__button-icon--detail"></span></a>
         </div>
-        <div class="c-detail-service__block">
+        <div class="c-detail-service__block c-detail-service__block--service">
             <h4 class="c-detail-service__subtitle">Услуги</h4>
             <ul class="c-detail-service__list c-detail-service-list">
                 <li><a class="c-detail-service-list__item" href="#"><i class="fas fa-caret-right"></i>Полировка</a></li>
@@ -20,7 +20,7 @@
                 <li><a class="c-detail-service-list__item" href="#"><i class="fas fa-caret-right"></i>Тонировка</a></li>
             </ul>
         </div>
-        <div class="c-detail-service__block">
+        <div class="c-detail-service__block c-detail-service__block--news mob-hidden">
             <h4 class="c-detail-service__subtitle">Новости</h4>
             <div class="c-news-detail">
                 <div class="c-news-detail__item">
@@ -42,23 +42,22 @@
         </div>
     </div>
     <div class="c-detail-service__column c-detail-service__column--right">
-        <div class="c-detail-service__slider c-detail-slider">
-            <div class="c-detail-slider__wrapper">
-                <div class="c-detail-slider__item"></div>
-<!--                <div class="c-bullets">-->
-<!--                    <ul class="c-bullets__wrapper">-->
-<!--                        <li class="c-bullets__bullet c-bullets__bullet&#45;&#45;active"></li>-->
-<!--                        <li class="c-bullets__bullet"></li>-->
-<!--                        <li class="c-bullets__bullet"></li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-                <div class="c-detail-slider__arrows c-detail-slider-arrows">
-                    <div class="c-detail-slider-arrows__wrapper">
-                        <span class="c-detail-slider-arrows__arrow"></span>
-                        <span class="c-detail-slider-arrows__arrow"></span>
-                    </div>
+        <div class="c-detail-service__slider c-detail-slider ">
+            <div class="c-detail-slider__wrapper swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="c-detail-slider__item swiper-slide" style="background-image: url(/img/detail_s1.jpg)"></div>
+                    <div class="c-detail-slider__item swiper-slide" style="background-image: url(/img/detail_s1.jpg)"></div>
+                </div>
+                <div class="c-bullets c-bullets--detail">
+                    <ul class="c-bullets__wrapper">
+                        <li class="c-bullets__bullet c-bullets__bullet&#45;&#45;active"></li>
+                        <li class="c-bullets__bullet"></li>
+                        <li class="c-bullets__bullet"></li>
+                    </ul>
                 </div>
             </div>
+            <span class="c-detail-slider-arrows__arrow c-detail-slider-arrows__arrow--left"><i class="far fa-chevron-left"></i></span>
+            <span class="c-detail-slider-arrows__arrow c-detail-slider-arrows__arrow--right"><i class="far fa-chevron-right"></i></span>
         </div>
         <div class="c-detail-service__article c-detail-article">
             <h2 class="c-detail-article__title">Что такое антигравийная пленка</h2>
