--- a/app/detail.html
+++ b/app/detail.html
@@ -45,8 +45,8 @@
         <div class="c-detail-service__slider c-detail-slider ">
             <div class="c-detail-slider__wrapper swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="c-detail-slider__item swiper-slide" style="background-image: url(/img/detail_s1.jpg)"></div>
-                    <div class="c-detail-slider__item swiper-slide" style="background-image: url(/img/detail_s1.jpg)"></div>
+                    <div class="c-detail-slider__item swiper-slide" style="background-image: url(img/detail_s1.jpg)"></div>
+                    <div class="c-detail-slider__item swiper-slide" style="background-image: url(img/detail_s1.jpg)"></div>
                 </div>
                 <div class="c-bullets c-bullets--detail">
                     <ul class="c-bullets__wrapper">
@@ -85,7 +85,7 @@
 </div>
 
 @@include('./template/components/detail/c-works.html')
-@@include('./template/components/index/c-map.html')
+@@include('./template/components/detail/c-map.html')
 @@include('./template/components/index/c-footer.html')
 
 @@include('./template/footer.html')
