--- a/app/index.html
+++ b/app/index.html
@@ -8,5 +8,5 @@
 @@include('./template/components/index/c-news.html')
 @@include('./template/components/index/c-map.html')
 @@include('./template/components/index/c-footer.html')
-
+@@include('./template/components/index/c-order-form.html')
 @@include('./template/footer.html')
