--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 @@include('./template/header.html')
 
 @@include('./template/components/index/c-top-panel.html')
+@@include('./template/components/index/c-header.html')
 @@include('./template/components/index/c-main-slider.html')
 @@include('./template/components/index/c-services.html')
 @@include('./template/components/index/c-choice.html')
